--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hyphenizes a string with ease",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/zaidajani/hyphenex/issues"
   },
-  "homepage": "https://github.com/zaidajani/hyphenex#readme"
+  "homepage": "https://github.com/zaidajani/hyphenex#readme",
+  "devDependencies": {
+    "jest": "^27.3.1"
+  }
 }
