final finishing done

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "keywords": [
     "hyphen",
-    "javascript"
+    "javascript",
+    "hyphenex",
+    "phenomenal",
+    "zaidajani",
+    "slugify"
   ],
   "author": "zaidajani",
   "license": "MIT",
